--- a/index.html
+++ b/index.html
@@ -356,5 +356,13 @@
         </div>
         </div>
     </footer>
+    <div class="backdrop">
+        <div class="modal">
+            <button type="button" class="modal-btn">X</button>
+        </div>
+    </div>
+    <script>
+        
+    </script>
 </body> 
 </html>
