--- a/portfolio.html
+++ b/portfolio.html
@@ -56,65 +56,91 @@
         </ul>
         <ul class="portfolio-schedule list">
             <li class="portfolio-item"> 
+            <div class="portfolio-card-description">
                 <a href=""><img src="./images/img1.portf.jpg" alt="Зображення на моніторі ноутбука" width="370" height="294" class="portfolio-image"></a>
-                <div class="portfolio-wrapper">
+                <p class="portfolio-card-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+            </div>
+            <div class="portfolio-wrapper">
                 <h2 class="portfolio-heading">Технокряк</h2>
                 <p class="portfolio-paragraph">Веб-сайт</p>
             </div>
             </li>
             <li class="portfolio-item">
+            <div class="portfolio-card-description"> 
                 <a href=""><img src="./images/img2.portf.jpg" alt="Баскетболісти" width="370" height="294" class="portfolio-image"></a>
-                <div class="portfolio-wrapper">
+                <p class="portfolio-card-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+            </div>
+            <div class="portfolio-wrapper">
                 <h2 class="portfolio-heading">Постер New Orlean vs Golden Star</h2>
                 <p class="portfolio-paragraph">Дизайн</p>
             </div>
             </li>
             <li class="portfolio-item">
+            <div class="portfolio-card-description">
                 <a href=""><img src="./images/img3.portf.jpg" alt="Зображення риби" width="370" height="294" class="portfolio-image"></a>
-                <div class="portfolio-wrapper">
+                <p class="portfolio-card-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+            </div>
+            <div class="portfolio-wrapper">
                 <h2 class="portfolio-heading">Ресторан Seafood</h2>
                 <p class="portfolio-paragraph">Приложение</p>
             </div>
             </li>
             <li class="portfolio-item">
+            <div class="portfolio-card-description">
                 <a href=""><img src="./images/img4.portf.jpg" alt="Навушники" width="370" height="294" class="portfolio-image"></a>
-                <div class="portfolio-wrapper">
+                <p class="portfolio-card-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+            </div>
+            <div class="portfolio-wrapper">
                 <h2 class="portfolio-heading">Проект Prime</h2>
                 <p class="portfolio-paragraph">Маркетинг</p>
             </div>
             </li>
             <li class="portfolio-item">
+            <div class="portfolio-card-description">
                 <a href=""><img src="./images/img5.portf.jpg" alt="Дві коробки" width="370" height="294" class="portfolio-image"></a>
-                <div class="portfolio-wrapper">
+                <p class="portfolio-card-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+            </div>    
+            <div class="portfolio-wrapper">
                 <h2 class="portfolio-heading">Проект Boxes</h2>
                 <p class="portfolio-paragraph">Приложение</p>
             </div>
             </li>
             <li class="portfolio-item">
+            <div class="portfolio-card-description">
                 <a href=""><img src="./images/img6.portf.jpg" alt="Монітор" width="370" height="294" class="portfolio-image"></a>
-                <div class="portfolio-wrapper">
+                <p class="portfolio-card-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+            </div>
+            <div class="portfolio-wrapper">
                 <h2 class="portfolio-heading">Inspiration has no Borders</h2>
                 <p class="portfolio-paragraph">Веб-сайт</p>
             </div>
             </li>
             <li class="portfolio-item">
+            <div class="portfolio-card-description">
                 <a href=""><img src="./images/img7.portf.jpg" alt="Сторінки журналу" width="370" height="294" class="portfolio-image"></a>
-                <div class="portfolio-wrapper">
+                <p class="portfolio-card-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+            </div>
+            <div class="portfolio-wrapper">
                 <h2 class="portfolio-heading">Издание Limited Edition</h2>
                 <p class="portfolio-paragraph">Дизайн</p>
             </div>
             </li>
             <li class="portfolio-item">
+            <div class="portfolio-card-description">
                 <a href=""><img src="./images/img8.portf.jpg" alt="Бірка від одягу" width="370" height="294" class="portfolio-image"></a>
-                <div class="portfolio-wrapper">
+                <p class="portfolio-card-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+            </div>      
+            <div class="portfolio-wrapper">
                 <h2 class="portfolio-heading">Проект LAB</h2>
                 <p class="portfolio-paragraph">Маркетинг</p>
             </div>
             </li>
             <li class="portfolio-item">
-                <a href=""><img src="./images/img9.portf.jpg" alt="Людина набирає текст на клавіатурі" width="370" height="294" class="portfolio-image">
-                </a>
-                <div class="portfolio-wrapper">
+            <div class="portfolio-card-description">
+                <a href=""><img src="./images/img9.portf.jpg" alt="Людина набирає текст на клавіатурі" width="370" height="294" class="portfolio-image"></a>
+                <p class="portfolio-card-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+            </div>
+            <div class="portfolio-wrapper">
                 <h2 class="portfolio-heading">Growing Business</h2>
                 <p class="portfolio-paragraph">Приложение</p>
             </div>
