--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!--Навігація сторінки-->
 <nav class="page-navigation">
     <ul class="header-list list">
-        <li class="header-roster"><a href="" class="header-item link">Студия</a></li>
+        <li class="header-roster"><a href="" class="header-item link current">Студия</a></li>
         <li class="header-roster"><a href="./portfolio.html" class="header-item link"> Портфолио</a></li>
         <li class="header-roster"><a href="" class="header-item link">Контакты</a></li>
     </ul>
@@ -49,7 +49,7 @@
         <section class="section-one ">
             <div class="container">
             <h1 class="side-title">Эффективные решения для вашего бизнеса</h1>
-            <button class="button-type">Заказать услугу</button>
+            <button class="button-type" data-modal-open >Заказать услугу</button>
             </div>
         </section>
         <section class="section-hero"> 
@@ -102,17 +102,25 @@
                 <img 
                 src="./images/img-1.jpg" 
                 alt="Мужчина печатает на клавиатуре" width="370" height="294"/>
+                <div class="about-us-thumb">
+                <p class="about-us-description">Десктопные приложения</p>
+                </div>
             </li>    
             <li class="about-us-item">
                 <img
                 src="./images/img-2.jpg" 
                 alt="Женщина смотрит на экран телефона" width="370" height="294"/>
+                <div class="about-us-thumb">
+                <p class="about-us-description">Мобильные приложения</p>
+                </div>
             </li>
             <li class="about-us-item">
                 <img
                 src="./images/img-3.jpg" 
                 alt="Женщина смотрит на экран телефона" width="370" height="294"/>
-
+                <div class="about-us-thumb">
+                <p class="about-us-description">Дизайнерские решения</p>
+                </div>
             </li>
         </ul>
       </div>        
@@ -356,13 +364,11 @@
         </div>
         </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button type="button" class="modal-btn">X</button>
+            <button type="button" class="modal-btn" data-modal-close>X</button>
         </div>
     </div>
-    <script>
-        
-    </script>
+    <script src="./js/modal.js"></script>
 </body> 
 </html>
