--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
 <nav class="page-navigation">
     <ul class="header-list list">
         <li class="header-roster"><a href="./index.html" class="header-item link">Студия</a></li>
-        <li class="header-roster"><a href="" class="header-item link"> Портфолио</a></li>
+        <li class="header-roster"><a href="" class="header-item link current"> Портфолио</a></li>
         <li class="header-roster"><a href="" class="header-item link">Контакты</a></li>
     </ul>
 </nav>
